--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ MANIFEST
 # Custom Files
 .docx
 .tex
+config.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
